Verschieben von Siesaso.Forms nach Dotnetuc.Forms, ListViewStrip erzeugt und eingebunden in den Prototypen, TypeConverter für denn CSV Mapper.

--- a/trunk/src/Dotnetuc.CsvMapper/Dotnetuc.CsvMapper.csproj
+++ b/trunk/src/Dotnetuc.CsvMapper/Dotnetuc.CsvMapper.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Internal\CsvHeaderInfo.cs" />
     <Compile Include="Internal\CsvNativeReader.cs" />
     <Compile Include="Internal\CsvNativeWriter.cs" />
+    <Compile Include="Internal\TypeConverter.cs" />
     <Compile Include="InvalidCsvFileException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
